--- a/Workshop 1/exercise_one.html
+++ b/Workshop 1/exercise_one.html
@@ -24,7 +24,7 @@
     <p>Hello its me Jayandra Dhami</p>
 
     <!-- Adding image  -->
-    <img src="CODING.jpg" alt="">
+    <img src="coding.jpg" alt="">
 
     <!-- Creating item of lists  -->
     <div>
