--- a/Workshop 1/exercise_one.html
+++ b/Workshop 1/exercise_one.html
@@ -29,7 +29,7 @@
     <!-- Creating item of lists  -->
     <div>
         <li>Rahul Singh Kunwar</li>
-        <li>Rishav Khativada</li>
+        <li>Rishav Khatiwada</li>
         <li>Jayandra Dhami</li>
         <li>Rahul Rajak</li>
     </div>
@@ -51,7 +51,8 @@
         </tr>
     </table>
     <!-- Creating a google chrome link   -->
-    <a href="https://www.google.com/" target="_blank">Go to google</a>
+    <a href="https://www.google.com/" target="_blank>Go to google</a> 
+    <a href=""></a>
 
 </body>
 
