--- a/lab/basic.htm
+++ b/lab/basic.htm
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        .container{
+            height: 200px;
+            width: 200px;
+            background-color: brown;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +17,8 @@
     <div class="container">My name is Jayandra Dhami</div>
     <div class="container">My nanme is rishav Khativada</div>
     <div class="container">My name is Rahul Kunwar</div>
-    <div class="container">My name is </div>
+    <div class="container">My name is Aryan Oli </div>
+    
     
 </body>
 </html>
